# read_wiser

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: bot.py  database.py  logging_config.py  metadata.py  parser.py  scheduler.py
tests/: conftest.py  test_database.py  test_metadata.py  test_parser.py
